Ajusta a cor do footer e mapeia as cores usadas para as que estão em index.css

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
 	background-color: var(--white);
 
 	--primary: #c92071;
+	--light-primary: #e03b8e;
 	--secondary: #b5b6f2;
 	--tertiary: #991956;
 	--error: #ee4266;
